--- a/src/assets/css/App.scss
+++ b/src/assets/css/App.scss
@@ -1,8 +1,8 @@
-
 @font-face {
   font-family: Karla;
   src: url('../fonts/Karla-Regular.ttf');
 }
+
 body {
   font-family: Karla, Arial, sans-serif;
   font-size: 14px;
@@ -37,5 +37,30 @@ body {
     border: solid 3px #232032;
     padding: 4px;
     width: 100%;
+  }
+
+  ul {
+    list-style-type: none;
+    padding: 0;
+
+    li {
+      width: 100%;
+      background: #bac0d2;
+      padding: 5px 10px;
+      margin-bottom: 5px;
+
+      button {
+        float: right;
+        border: none;
+        background: transparent;
+        color: #7a1e3f;
+        font-size: 15px;
+        transition: all 0.1s;
+
+        &:hover {
+          transform: scale(2);
+        }
+      }
+    }
   }
 }
