--- a/src/assets/css/App.scss
+++ b/src/assets/css/App.scss
@@ -12,6 +12,11 @@ body {
   * {
     box-sizing: border-box;
   }
+
+  h1, h2, h3, h4 {
+    margin: 0;
+    font-weight: normal;
+  }
 }
 
 .app {
@@ -30,6 +35,26 @@ body {
     &:first-child {
       color: #000;
       background-color: #d5dcef;
+    }
+
+    &:nth-child(2) {
+
+      li {
+        background-color: rgba(255, 255, 255, 0.2);
+
+        h4 {
+          font-size: 11px;
+          display: inline-block;
+          background-color: #d5dcef;
+          padding: 4px;
+          margin: 10px 0;
+          color: #232032;
+        }
+
+        h3 {
+          font-size: 13px;
+        }
+      }
     }
   }
 
